chore: update openapi
